2003-01-21  Johan Dahlin  <jdahlin@async.com.br>

	* gobjectmodule.c: Add GMainContext bindings and complete the
	GMainLoop bindings. Fixes #102362.

	* dsextras.py: Splitted out from setup.py. It should be reusable
	for gnome-python and other extensions that uses pygtk. 
	Fixes #103615

	* gtk/gtk.override (quit_handler_marshal): Added to here, was
	generated before. This version handle threads better. Patch from 
	John Finlay, Fixes #103851.

2003-01-20  Johan Dahlin  <jdahlin@async.com.br>

	* gtk/gdk.override (_wrap_gdk_event_tp_getattr): Added correct
	__members__ to all different kind of GdkEvent's. This fixes the
	dir() output, also reported as #103979

2003-01-19  Johan Dahlin  <jdahlin@async.com.br>

	* pygtk.py (_get_available_versions): Check if a directory is
	empty before adding it to the path. Also added a few comments.
	Fixes #103876 (Ross Burton).
	
2003-01-18  Johan Dahlin  <jdahlin@async.com.br>

	* gtk/gtk.defs (drag_source_set_icon, set_from_pixmap): Null is
	okay here. Fixes #103559 (John Finlay)

	* gtk/gtk.defs (begins_tag, ends_tag, toggles_tag): Add default
	values. Fixes #103443 (John Finlay)

	* gtk/gdk.defs (bitmap_create_from_data): Change data parameter
	from const-gchar to const-guchar. Fixes #103616 (Eddie Kohler)

	* setup.py: use os.path.join in a few more places

	* pygobject-private.h: Add PyGMainLoop struct and type

	* gobjectmodule.c (_wrap_g_main_loop_new, _wrap_g_main_loop_quit) 
	(_wrap_g_main_loop_is_running, _wrap_g_main_loop_run): Added
	GMainLoop wrapper.
	(initgobject): Register wrapper in gobject.MainLoop

	* setup.py: Check for the python version
	(Template.generate): Use codegen directly instead of os.system()

2003-01-17  Jon Trowbridge  <trow@ximian.com>

	* pygobject.c (pygobject_dealloc): In my fix for bug #102756 on
	2003-01-08, I should have used calls to pyg_unblock_threads()/
	pyg_block_threads() instead of directly calling the
	Py_BEGIN_ALLOW_THREADS/Py_END_ALLOW_THREADS macros.  The macros