@@ -1,5 +1,10 @@
 2003-01-21  Johan Dahlin  <jdahlin@async.com.br>
 
+	* dsextras.py (Template.generate): Import codegen here instead,
+	needs to be fixed in the future though.
+
+	* Makefile.am (EXTRA_DIST): Added dsextras.py
+
 	* gobjectmodule.c: Add GMainContext bindings and complete the
 	GMainLoop bindings. Fixes #102362.
 
